--- a/_includes/category.html
+++ b/_includes/category.html
@@ -13,7 +13,7 @@
 {% unless category_size == '0' %}
 <!-- <span class="point">•</span> -->
 <span class="categories">
-  <i class="fa fa-th-list"></i>{{ categories }}
+  <i class="fa fa-th-list"></i>{{ 分类 }}
   <!-- <span class="point">•</span> -->
 </span>
 {% endunless %}
