--- a/_includes/tag.html
+++ b/_includes/tag.html
@@ -11,6 +11,6 @@
   {% endif %}
 {% endcapture %}
 <!-- <span class="point">•</span> -->
-<span class="pageTag">
+<span class="标签">
   <i class="fa fa-tags"></i>{{ 标签 }}
 </span>
