--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
-
+# 网页整体布局
+# 分左边与右边
 <div class="page clearfix" post>
     <div class="left">
         <h1>{{page.title}}</h1>
@@ -78,7 +79,7 @@ layout: default
             <!-- Content -->
             <div class="side content">
                 <div>
-                    Content
+                    目录
                 </div>
                 <ul id="content-side" class="content-ul">
                     {% if hasSimilar.size > 0 %}
