--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 ---
-# 网页整体布局
-# 分左边与右边
+<!-- 网页整体布局 分左边与右边 -->
 <div class="page clearfix" post>
     <div class="left">
         <h1>{{page.title}}</h1>
