--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,12 @@
 ---
 layout: default
 ---
-
+<style>
+	body
+	{
+	background-image:url("/background.jpeg")
+	}
+	</style>
 <div class="page clearfix" post>
     <div class="left">
         <h1>{{page.title}}</h1>
