--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,9 +19,9 @@
         </p>
         <p>
             <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-            本站总访问量<span id="busuanzi_value_site_pv"></span>次，本站访客数<span id="busuanzi_value_site_uv"></span>人次，
+            本站总访问量<span id="busuanzi_value_site_pv"></span>次，本站访客数<span id="busuanzi_value_site_uv"></span>人次
             <span id="busuanzi_container_page_pv">
-                本文总阅读量<span id="busuanzi_value_page_pv"></span>次
+                本文总阅读量<span id="busuanzi_value_page_pv">次
             </span>
         </p>
         <p class="power">
